--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     EJS_gameUrl = 'Super Mario Kart (USA).sfc'; // Url to Game rom
     EJS_core = 'snes';
     EJS_mouse = false; // SNES Mouse
-    EJS_multitap = true; // SNES Multitap
+    EJS_multitap = false; // SNES Multitap
 </script>
 <script src="https://www.emulatorjs.com/loader.js"></script>
